@@ -1,167 +1,60 @@
+import com.google.common.collect.ImmutableList;
 import com.mojang.datafixers.util.Pair;
-import java.util.List;
 
 public class oh {
-   public static final aey<dwl> a = ny.a("trail_ruins/tower");
-
-   public static void a(nr<dwl> $$0) {
-      hf<dwl> $$1 = $$0.a(jc.aD);
-      he<dwl> $$2 = $$1.b(ny.a);
-      hf<dyt> $$3 = $$0.a(jc.aB);
-      he<dyt> $$4 = $$3.b(nz.J);
-      he<dyt> $$5 = $$3.b(nz.K);
-      he<dyt> $$6 = $$3.b(nz.L);
-      $$0.a(
-         a,
-         new dwl(
-            $$2,
-            List.of(
-               Pair.of(dwj.b("trail_ruins/tower/tower_1", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/tower_2", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/tower_3", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/tower_4", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/tower_5", $$4), 1)
+   public static void a(oo<dxj> $$0) {
+      ic<dzr> $$1 = $$0.a(jz.aB);
+      ib<dzr> $$2 = $$1.b(ow.y);
+      ib<dzr> $$3 = $$1.b(ow.w);
+      ib<dzr> $$4 = $$1.b(ow.z);
+      ib<dzr> $$5 = $$1.b(ow.x);
+      ic<dxj> $$6 = $$0.a(jz.aD);
+      ib<dxj> $$7 = $$6.b(ov.a);
+      ov.a(
+         $$0,
+         "bastion/bridge/starting_pieces",
+         new dxj(
+            $$7,
+            ImmutableList.of(
+               Pair.of(dxh.b("bastion/bridge/starting_pieces/entrance", $$2), 1), Pair.of(dxh.b("bastion/bridge/starting_pieces/entrance_face", $$3), 1)
             ),
-            dwl.a.b
+            dxj.a.b
          )
       );
-      ny.a(
+      ov.a($$0, "bastion/bridge/bridge_pieces", new dxj($$7, ImmutableList.of(Pair.of(dxh.b("bastion/bridge/bridge_pieces/bridge", $$4), 1)), dxj.a.b));
+      ov.a(
          $$0,
-         "trail_ruins/tower/tower_top",
-         new dwl(
-            $$2,
-            List.of(
-               Pair.of(dwj.b("trail_ruins/tower/tower_top_1", $$6), 1),
-               Pair.of(dwj.b("trail_ruins/tower/tower_top_2", $$6), 1),
-               Pair.of(dwj.b("trail_ruins/tower/tower_top_3", $$6), 1),
-               Pair.of(dwj.b("trail_ruins/tower/tower_top_4", $$6), 1),
-               Pair.of(dwj.b("trail_ruins/tower/tower_top_5", $$6), 1)
-            ),
-            dwl.a.b
+         "bastion/bridge/legs",
+         new dxj($$7, ImmutableList.of(Pair.of(dxh.b("bastion/bridge/legs/leg_0", $$3), 1), Pair.of(dxh.b("bastion/bridge/legs/leg_1", $$3), 1)), dxj.a.b)
+      );
+      ov.a(
+         $$0,
+         "bastion/bridge/walls",
+         new dxj(
+            $$7,
+            ImmutableList.of(Pair.of(dxh.b("bastion/bridge/walls/wall_base_0", $$5), 1), Pair.of(dxh.b("bastion/bridge/walls/wall_base_1", $$5), 1)),
+            dxj.a.b
          )
       );
-      ny.a(
+      ov.a(
          $$0,
-         "trail_ruins/tower/additions",
-         new dwl(
-            $$2,
-            List.of(
-               Pair.of(dwj.b("trail_ruins/tower/hall_1", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/hall_2", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/hall_3", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/hall_4", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/hall_5", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/large_hall_1", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/large_hall_2", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/large_hall_3", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/large_hall_4", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/large_hall_5", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/one_room_1", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/one_room_2", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/one_room_3", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/one_room_4", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/one_room_5", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/platform_1", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/platform_2", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/platform_3", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/platform_4", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/platform_5", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/stable_1", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/stable_2", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/stable_3", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/stable_4", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/tower/stable_5", $$4), 1)
-            ),
-            dwl.a.b
+         "bastion/bridge/ramparts",
+         new dxj(
+            $$7,
+            ImmutableList.of(Pair.of(dxh.b("bastion/bridge/ramparts/rampart_0", $$5), 1), Pair.of(dxh.b("bastion/bridge/ramparts/rampart_1", $$5), 1)),
+            dxj.a.b
          )
       );
-      ny.a(
+      ov.a($$0, "bastion/bridge/rampart_plates", new dxj($$7, ImmutableList.of(Pair.of(dxh.b("bastion/bridge/rampart_plates/plate_0", $$5), 1)), dxj.a.b));
+      ov.a(
          $$0,
-         "trail_ruins/roads",
-         new dwl(
-            $$2,
-            List.of(
-               Pair.of(dwj.b("trail_ruins/roads/long_road_end", $$5), 1),
-               Pair.of(dwj.b("trail_ruins/roads/road_end_1", $$5), 1),
-               Pair.of(dwj.b("trail_ruins/roads/road_section_1", $$5), 1),
-               Pair.of(dwj.b("trail_ruins/roads/road_section_2", $$5), 1),
-               Pair.of(dwj.b("trail_ruins/roads/road_section_3", $$5), 1),
-               Pair.of(dwj.b("trail_ruins/roads/road_section_4", $$5), 1),
-               Pair.of(dwj.b("trail_ruins/roads/road_spacer_1", $$5), 1)
+         "bastion/bridge/connectors",
+         new dxj(
+            $$7,
+            ImmutableList.of(
+               Pair.of(dxh.b("bastion/bridge/connectors/back_bridge_top", $$3), 1), Pair.of(dxh.b("bastion/bridge/connectors/back_bridge_bottom", $$3), 1)
             ),
-            dwl.a.b
-         )
-      );
-      ny.a(
-         $$0,
-         "trail_ruins/buildings",
-         new dwl(
-            $$2,
-            List.of(
-               Pair.of(dwj.b("trail_ruins/buildings/group_hall_1", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/group_hall_2", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/group_hall_3", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/group_hall_4", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/group_hall_5", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/large_room_1", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/large_room_2", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/large_room_3", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/large_room_4", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/large_room_5", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/one_room_1", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/one_room_2", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/one_room_3", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/one_room_4", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/one_room_5", $$4), 1)
-            ),
-            dwl.a.b
-         )
-      );
-      ny.a(
-         $$0,
-         "trail_ruins/buildings/grouped",
-         new dwl(
-            $$2,
-            List.of(
-               Pair.of(dwj.b("trail_ruins/buildings/group_full_1", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/group_full_2", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/group_full_3", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/group_full_4", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/group_full_5", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/group_lower_1", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/group_lower_2", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/group_lower_3", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/group_lower_4", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/group_lower_5", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/group_upper_1", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/group_upper_2", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/group_upper_3", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/group_upper_4", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/group_upper_5", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/group_room_1", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/group_room_2", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/group_room_3", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/group_room_4", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/buildings/group_room_5", $$4), 1)
-            ),
-            dwl.a.b
-         )
-      );
-      ny.a(
-         $$0,
-         "trail_ruins/decor",
-         new dwl(
-            $$2,
-            List.of(
-               Pair.of(dwj.b("trail_ruins/decor/decor_1", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/decor/decor_2", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/decor/decor_3", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/decor/decor_4", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/decor/decor_5", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/decor/decor_6", $$4), 1),
-               Pair.of(dwj.b("trail_ruins/decor/decor_7", $$4), 1)
-            ),
-            dwl.a.b
+            dxj.a.b
          )
       );
    }
