@@ -1,53 +1,42 @@
-import java.util.List;
+import com.google.common.collect.ImmutableList;
+import com.mojang.datafixers.util.Pair;
 
 public class ot {
-   public static final aey<dnd<?, ?>> a = or.a("delta");
-   public static final aey<dnd<?, ?>> b = or.a("small_basalt_columns");
-   public static final aey<dnd<?, ?>> c = or.a("large_basalt_columns");
-   public static final aey<dnd<?, ?>> d = or.a("basalt_blobs");
-   public static final aey<dnd<?, ?>> e = or.a("blackstone_blobs");
-   public static final aey<dnd<?, ?>> f = or.a("glowstone_extra");
-   public static final aey<dnd<?, ?>> g = or.a("crimson_forest_vegetation");
-   public static final aey<dnd<?, ?>> h = or.a("crimson_forest_vegetation_bonemeal");
-   public static final aey<dnd<?, ?>> i = or.a("warped_forest_vegetation");
-   public static final aey<dnd<?, ?>> j = or.a("warped_forest_vegetation_bonemeal");
-   public static final aey<dnd<?, ?>> k = or.a("nether_sprouts");
-   public static final aey<dnd<?, ?>> l = or.a("nether_sprouts_bonemeal");
-   public static final aey<dnd<?, ?>> m = or.a("twisting_vines");
-   public static final aey<dnd<?, ?>> n = or.a("twisting_vines_bonemeal");
-   public static final aey<dnd<?, ?>> o = or.a("weeping_vines");
-   public static final aey<dnd<?, ?>> p = or.a("patch_crimson_roots");
-   public static final aey<dnd<?, ?>> q = or.a("basalt_pillar");
-   public static final aey<dnd<?, ?>> r = or.a("spring_lava_nether");
-   public static final aey<dnd<?, ?>> s = or.a("spring_nether_closed");
-   public static final aey<dnd<?, ?>> t = or.a("spring_nether_open");
-   public static final aey<dnd<?, ?>> u = or.a("patch_fire");
-   public static final aey<dnd<?, ?>> v = or.a("patch_soul_fire");
+   public static final afv<dxj> a = ov.a("pillager_outpost/base_plates");
 
-   public static void a(nr<dnd<?, ?>> $$0) {
-      or.a($$0, a, dnq.Z, new dpq(cte.H.o(), cte.kJ.o(), bgp.a(3, 7), bgp.a(0, 2)));
-      or.a($$0, b, dnq.Y, new dpo(bgg.a(1), bgp.a(1, 4)));
-      or.a($$0, c, dnq.Y, new dpo(bgp.a(2, 3), bgp.a(5, 10)));
-      or.a($$0, d, dnq.aa, new dqj(cte.dV.o(), cte.dY.o(), bgp.a(3, 7)));
-      or.a($$0, e, dnq.aa, new dqj(cte.dV.o(), cte.pr.o(), bgp.a(3, 7)));
-      or.a($$0, f, dnq.t);
-      dsf $$1 = new dsf(bfo.<dfd>a().a(cte.oD.o(), 87).a(cte.ox.o(), 11).a(cte.oo.o(), 1));
-      or.a($$0, g, dnq.V, new dqa($$1, 8, 4));
-      or.a($$0, h, dnq.V, new dqa($$1, 3, 1));
-      dsf $$2 = new dsf(bfo.<dfd>a().a(cte.oq.o(), 85).a(cte.oD.o(), 1).a(cte.oo.o(), 13).a(cte.ox.o(), 1));
-      or.a($$0, i, dnq.V, new dqa($$2, 8, 4));
-      or.a($$0, j, dnq.V, new dqa($$2, 3, 1));
-      or.a($$0, k, dnq.V, new dqa(drv.a(cte.or), 8, 4));
-      or.a($$0, l, dnq.V, new dqa(drv.a(cte.or), 3, 1));
-      or.a($$0, m, dnq.X, new dqr(8, 4, 8));
-      or.a($$0, n, dnq.X, new dqr(3, 1, 2));
-      or.a($$0, o, dnq.W);
-      or.a($$0, p, dnq.i, or.a(dnq.S, new dqm(drv.a(cte.oD))));
-      or.a($$0, q, dnq.ad);
-      or.a($$0, r, dnq.k, new dqp(eah.e.g(), true, 4, 1, hi.a(ctc::r, cte.dV, cte.dW, cte.L, cte.kJ, cte.pr)));
-      or.a($$0, s, dnq.k, new dqp(eah.e.g(), false, 5, 0, hi.a(ctc::r, cte.dV)));
-      or.a($$0, t, dnq.k, new dqp(eah.e.g(), false, 4, 1, hi.a(ctc::r, cte.dV)));
-      or.a($$0, u, dnq.i, or.a(dnq.S, new dqm(drv.a(cte.cr)), List.of(cte.dV)));
-      or.a($$0, v, dnq.i, or.a(dnq.S, new dqm(drv.a(cte.cs)), List.of(cte.dX)));
+   public static void a(oo<dxj> $$0) {
+      ic<dzr> $$1 = $$0.a(jz.aB);
+      ib<dzr> $$2 = $$1.b(ow.q);
+      ic<dxj> $$3 = $$0.a(jz.aD);
+      ib<dxj> $$4 = $$3.b(ov.a);
+      $$0.a(a, new dxj($$4, ImmutableList.of(Pair.of(dxh.a("pillager_outpost/base_plate"), 1)), dxj.a.b));
+      ov.a(
+         $$0,
+         "pillager_outpost/towers",
+         new dxj(
+            $$4,
+            ImmutableList.of(Pair.of(dxh.a(ImmutableList.of(dxh.a("pillager_outpost/watchtower"), dxh.a("pillager_outpost/watchtower_overgrown", $$2))), 1)),
+            dxj.a.b
+         )
+      );
+      ov.a($$0, "pillager_outpost/feature_plates", new dxj($$4, ImmutableList.of(Pair.of(dxh.a("pillager_outpost/feature_plate"), 1)), dxj.a.a));
+      ov.a(
+         $$0,
+         "pillager_outpost/features",
+         new dxj(
+            $$4,
+            ImmutableList.of(
+               Pair.of(dxh.a("pillager_outpost/feature_cage1"), 1),
+               Pair.of(dxh.a("pillager_outpost/feature_cage2"), 1),
+               Pair.of(dxh.a("pillager_outpost/feature_cage_with_allays"), 1),
+               Pair.of(dxh.a("pillager_outpost/feature_logs"), 1),
+               Pair.of(dxh.a("pillager_outpost/feature_tent1"), 1),
+               Pair.of(dxh.a("pillager_outpost/feature_tent2"), 1),
+               Pair.of(dxh.a("pillager_outpost/feature_targets"), 1),
+               Pair.of(dxh.g(), 6)
+            ),
+            dxj.a.b
+         )
+      );
    }
 }
