@@ -1,290 +1,485 @@
 import com.google.common.collect.ImmutableList;
 import java.util.List;
-import java.util.Optional;
-import java.util.OptionalInt;
 
 public class ow {
-   public static final aey<dnd<?, ?>> a = or.a("crimson_fungus");
-   public static final aey<dnd<?, ?>> b = or.a("crimson_fungus_planted");
-   public static final aey<dnd<?, ?>> c = or.a("warped_fungus");
-   public static final aey<dnd<?, ?>> d = or.a("warped_fungus_planted");
-   public static final aey<dnd<?, ?>> e = or.a("huge_brown_mushroom");
-   public static final aey<dnd<?, ?>> f = or.a("huge_red_mushroom");
-   public static final aey<dnd<?, ?>> g = or.a("oak");
-   public static final aey<dnd<?, ?>> h = or.a("dark_oak");
-   public static final aey<dnd<?, ?>> i = or.a("birch");
-   public static final aey<dnd<?, ?>> j = or.a("acacia");
-   public static final aey<dnd<?, ?>> k = or.a("spruce");
-   public static final aey<dnd<?, ?>> l = or.a("pine");
-   public static final aey<dnd<?, ?>> m = or.a("jungle_tree");
-   public static final aey<dnd<?, ?>> n = or.a("fancy_oak");
-   public static final aey<dnd<?, ?>> o = or.a("jungle_tree_no_vine");
-   public static final aey<dnd<?, ?>> p = or.a("mega_jungle_tree");
-   public static final aey<dnd<?, ?>> q = or.a("mega_spruce");
-   public static final aey<dnd<?, ?>> r = or.a("mega_pine");
-   public static final aey<dnd<?, ?>> s = or.a("super_birch_bees_0002");
-   public static final aey<dnd<?, ?>> t = or.a("super_birch_bees");
-   public static final aey<dnd<?, ?>> u = or.a("swamp_oak");
-   public static final aey<dnd<?, ?>> v = or.a("jungle_bush");
-   public static final aey<dnd<?, ?>> w = or.a("azalea_tree");
-   public static final aey<dnd<?, ?>> x = or.a("mangrove");
-   public static final aey<dnd<?, ?>> y = or.a("tall_mangrove");
-   public static final aey<dnd<?, ?>> z = or.a("cherry");
-   public static final aey<dnd<?, ?>> A = or.a("oak_bees_0002");
-   public static final aey<dnd<?, ?>> B = or.a("oak_bees_002");
-   public static final aey<dnd<?, ?>> C = or.a("oak_bees_005");
-   public static final aey<dnd<?, ?>> D = or.a("birch_bees_0002");
-   public static final aey<dnd<?, ?>> E = or.a("birch_bees_002");
-   public static final aey<dnd<?, ?>> F = or.a("birch_bees_005");
-   public static final aey<dnd<?, ?>> G = or.a("fancy_oak_bees_0002");
-   public static final aey<dnd<?, ?>> H = or.a("fancy_oak_bees_002");
-   public static final aey<dnd<?, ?>> I = or.a("fancy_oak_bees_005");
-   public static final aey<dnd<?, ?>> J = or.a("fancy_oak_bees");
-   public static final aey<dnd<?, ?>> K = or.a("cherry_bees_005");
+   private static final afv<dzr> M = a("empty");
+   public static final afv<dzr> a = a("zombie_plains");
+   public static final afv<dzr> b = a("zombie_savanna");
+   public static final afv<dzr> c = a("zombie_snowy");
+   public static final afv<dzr> d = a("zombie_taiga");
+   public static final afv<dzr> e = a("zombie_desert");
+   public static final afv<dzr> f = a("mossify_10_percent");
+   public static final afv<dzr> g = a("mossify_20_percent");
+   public static final afv<dzr> h = a("mossify_70_percent");
+   public static final afv<dzr> i = a("street_plains");
+   public static final afv<dzr> j = a("street_savanna");
+   public static final afv<dzr> k = a("street_snowy_or_taiga");
+   public static final afv<dzr> l = a("farm_plains");
+   public static final afv<dzr> m = a("farm_savanna");
+   public static final afv<dzr> n = a("farm_snowy");
+   public static final afv<dzr> o = a("farm_taiga");
+   public static final afv<dzr> p = a("farm_desert");
+   public static final afv<dzr> q = a("outpost_rot");
+   public static final afv<dzr> r = a("bottom_rampart");
+   public static final afv<dzr> s = a("treasure_rooms");
+   public static final afv<dzr> t = a("housing");
+   public static final afv<dzr> u = a("side_wall_degradation");
+   public static final afv<dzr> v = a("stable_degradation");
+   public static final afv<dzr> w = a("bastion_generic_degradation");
+   public static final afv<dzr> x = a("rampart_degradation");
+   public static final afv<dzr> y = a("entrance_replacement");
+   public static final afv<dzr> z = a("bridge");
+   public static final afv<dzr> A = a("roof");
+   public static final afv<dzr> B = a("high_wall");
+   public static final afv<dzr> C = a("high_rampart");
+   public static final afv<dzr> D = a("fossil_rot");
+   public static final afv<dzr> E = a("fossil_coal");
+   public static final afv<dzr> F = a("fossil_diamonds");
+   public static final afv<dzr> G = a("ancient_city_start_degradation");
+   public static final afv<dzr> H = a("ancient_city_generic_degradation");
+   public static final afv<dzr> I = a("ancient_city_walls_degradation");
+   public static final afv<dzr> J = a("trail_ruins_houses_archaeology");
+   public static final afv<dzr> K = a("trail_ruins_roads_archaeology");
+   public static final afv<dzr> L = a("trail_ruins_tower_top_archaeology");
 
-   private static dqq.a a(ctc $$0, ctc $$1, int $$2, int $$3, int $$4, int $$5) {
-      return new dqq.a(drv.a($$0), new dsx($$2, $$3, $$4), drv.a($$1), new drb(bgg.a($$5), bgg.a(0), 3), new dqy(1, 0, 1));
+   private static afv<dzr> a(String $$0) {
+      return afv.a(jz.aB, new afw($$0));
    }
 
-   private static dqq.a a() {
-      return a(cte.U, cte.aE, 4, 2, 0, 2).a();
+   private static void a(oo<dzr> $$0, afv<dzr> $$1, List<dzq> $$2) {
+      $$0.a($$1, new dzr($$2));
    }
 
-   private static dqq.a b() {
-      return a(cte.W, cte.aG, 5, 2, 0, 2).a();
-   }
-
-   private static dqq.a c() {
-      return a(cte.W, cte.aG, 5, 2, 6, 2).a();
-   }
-
-   private static dqq.a d() {
-      return a(cte.X, cte.aH, 4, 8, 0, 2);
-   }
-
-   private static dqq.a e() {
-      return new dqq.a(drv.a(cte.U), new dst(3, 11, 0), drv.a(cte.aE), new drf(bgg.a(2), bgg.a(4), 4), new dqy(0, 0, 0, OptionalInt.of(4))).a();
-   }
-
-   private static dqq.a f() {
-      return new dqq.a(
-            drv.a(cte.Z),
-            new dsr(7, 1, 0, new bgq(bfo.<bgj>a().a(bgg.a(1), 1).a(bgg.a(2), 1).a(bgg.a(3), 1).a()), bgp.a(2, 4), bgp.a(-4, -3), bgp.a(-1, 0)),
-            drv.a(cte.aJ),
-            new drd(bgg.a(4), bgg.a(0), bgg.a(5), 0.25F, 0.5F, 0.16666667F, 0.33333334F),
-            new dqy(1, 0, 2)
+   public static void a(oo<dzr> $$0) {
+      ic<cua> $$1 = $$0.a(jz.e);
+      dzi $$2 = new dzi(new dzk(cuc.pr, 0.01F), dyr.b, cuc.pC.o());
+      dzi $$3 = new dzi(new dzk(cuc.pC, 0.5F), dyr.b, cuc.pr.o());
+      a($$0, M, ImmutableList.of());
+      a(
+         $$0,
+         a,
+         ImmutableList.of(
+            new dzm(
+               ImmutableList.of(
+                  new dzi(new dzk(cuc.m, 0.8F), dyr.b, cuc.cn.o()),
+                  new dzi(new dzv(aqs.p), dyr.b, cuc.a.o()),
+                  new dzi(new dyw(cuc.cp), dyr.b, cuc.a.o()),
+                  new dzi(new dyw(cuc.cq), dyr.b, cuc.a.o()),
+                  new dzi(new dzk(cuc.m, 0.07F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.cn, 0.07F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.hj, 0.07F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.U, 0.05F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.n, 0.1F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.cu, 0.1F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.al, 0.02F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.eY, 0.5F), dyr.b, cuc.bs.o()),
+                  new dzi[]{
+                     new dzi(
+                        new dyy(cuc.eY.o().a(cxz.a, Boolean.valueOf(true)).a(cxz.c, Boolean.valueOf(true))),
+                        dyr.b,
+                        cuc.hL.o().a(cxz.a, Boolean.valueOf(true)).a(cxz.c, Boolean.valueOf(true))
+                     ),
+                     new dzi(
+                        new dyy(cuc.eY.o().a(cxz.b, Boolean.valueOf(true)).a(cxz.d, Boolean.valueOf(true))),
+                        dyr.b,
+                        cuc.hL.o().a(cxz.b, Boolean.valueOf(true)).a(cxz.d, Boolean.valueOf(true))
+                     ),
+                     new dzi(new dzk(cuc.cB, 0.3F), dyr.b, cuc.gt.o()),
+                     new dzi(new dzk(cuc.cB, 0.2F), dyr.b, cuc.gu.o()),
+                     new dzi(new dzk(cuc.cB, 0.1F), dyr.b, cuc.kD.o())
+                  }
+               )
+            )
          )
-         .a();
-   }
-
-   public static void a(nr<dnd<?, ?>> $$0) {
-      hf<ctc> $$1 = $$0.a(jc.e);
-      dlt $$2 = dlt.a(
-         cte.x,
-         cte.y,
-         cte.z,
-         cte.A,
-         cte.B,
-         cte.C,
-         cte.D,
-         cte.E,
-         cte.bR,
-         cte.bS,
-         cte.bT,
-         cte.bU,
-         cte.bV,
-         cte.bW,
-         cte.bX,
-         cte.bY,
-         cte.bZ,
-         cte.ca,
-         cte.cb,
-         cte.cc,
-         cte.cd,
-         cte.ce,
-         cte.cf,
-         cte.cg,
-         cte.cB,
-         cte.dS,
-         cte.fb,
-         cte.fc,
-         cte.fd,
-         cte.fe,
-         cte.fm,
-         cte.fq,
-         cte.fC,
-         cte.gt,
-         cte.gu,
-         cte.ku,
-         cte.kv,
-         cte.kA,
-         cte.kB,
-         cte.kD,
-         cte.oi,
-         cte.oo,
-         cte.ox,
-         cte.oz,
-         cte.oA,
-         cte.oB,
-         cte.oC,
-         cte.ru,
-         cte.rv,
-         cte.rw,
-         cte.rx,
-         cte.ry,
-         cte.rz,
-         cte.rA,
-         cte.rC,
-         cte.rD,
-         cte.rE
       );
-      or.a($$0, a, dnq.U, new dnz(cte.ow.o(), cte.os.o(), cte.kK.o(), cte.oy.o(), $$2, false));
-      or.a($$0, b, dnq.U, new dnz(cte.ow.o(), cte.os.o(), cte.kK.o(), cte.oy.o(), $$2, true));
-      or.a($$0, c, dnq.U, new dnz(cte.on.o(), cte.oj.o(), cte.op.o(), cte.oy.o(), $$2, false));
-      or.a($$0, d, dnq.U, new dnz(cte.on.o(), cte.oj.o(), cte.op.o(), cte.oy.o(), $$2, true));
-      or.a(
+      a(
+         $$0,
+         b,
+         ImmutableList.of(
+            new dzm(
+               ImmutableList.of(
+                  new dzi(new dzv(aqs.p), dyr.b, cuc.a.o()),
+                  new dzi(new dyw(cuc.cp), dyr.b, cuc.a.o()),
+                  new dzi(new dyw(cuc.cq), dyr.b, cuc.a.o()),
+                  new dzi(new dzk(cuc.r, 0.2F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.hP, 0.2F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.Y, 0.05F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.as, 0.05F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.hk, 0.05F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.hn, 0.05F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.hx, 0.05F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.eY, 0.5F), dyr.b, cuc.bs.o()),
+                  new dzi(
+                     new dyy(cuc.eY.o().a(cxz.a, Boolean.valueOf(true)).a(cxz.c, Boolean.valueOf(true))),
+                     dyr.b,
+                     cuc.hL.o().a(cxz.a, Boolean.valueOf(true)).a(cxz.c, Boolean.valueOf(true))
+                  ),
+                  new dzi[]{
+                     new dzi(
+                        new dyy(cuc.eY.o().a(cxz.b, Boolean.valueOf(true)).a(cxz.d, Boolean.valueOf(true))),
+                        dyr.b,
+                        cuc.hL.o().a(cxz.b, Boolean.valueOf(true)).a(cxz.d, Boolean.valueOf(true))
+                     ),
+                     new dzi(new dzk(cuc.cB, 0.1F), dyr.b, cuc.fe.o())
+                  }
+               )
+            )
+         )
+      );
+      a(
+         $$0,
+         c,
+         ImmutableList.of(
+            new dzm(
+               ImmutableList.of(
+                  new dzi(new dzv(aqs.p), dyr.b, cuc.a.o()),
+                  new dzi(new dyw(cuc.cp), dyr.b, cuc.a.o()),
+                  new dzi(new dyw(cuc.cq), dyr.b, cuc.a.o()),
+                  new dzi(new dyw(cuc.oe), dyr.b, cuc.a.o()),
+                  new dzi(new dzk(cuc.o, 0.2F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.ju, 0.4F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.af, 0.05F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.ax, 0.05F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.eY, 0.5F), dyr.b, cuc.bs.o()),
+                  new dzi(
+                     new dyy(cuc.eY.o().a(cxz.a, Boolean.valueOf(true)).a(cxz.c, Boolean.valueOf(true))),
+                     dyr.b,
+                     cuc.hL.o().a(cxz.a, Boolean.valueOf(true)).a(cxz.c, Boolean.valueOf(true))
+                  ),
+                  new dzi(
+                     new dyy(cuc.eY.o().a(cxz.b, Boolean.valueOf(true)).a(cxz.d, Boolean.valueOf(true))),
+                     dyr.b,
+                     cuc.hL.o().a(cxz.b, Boolean.valueOf(true)).a(cxz.d, Boolean.valueOf(true))
+                  ),
+                  new dzi(new dzk(cuc.cB, 0.1F), dyr.b, cuc.gt.o()),
+                  new dzi[]{new dzi(new dzk(cuc.cB, 0.8F), dyr.b, cuc.gu.o())}
+               )
+            )
+         )
+      );
+      a(
+         $$0,
+         d,
+         ImmutableList.of(
+            new dzm(
+               ImmutableList.of(
+                  new dzi(new dzk(cuc.m, 0.8F), dyr.b, cuc.cn.o()),
+                  new dzi(new dzv(aqs.p), dyr.b, cuc.a.o()),
+                  new dzi(new dyw(cuc.cp), dyr.b, cuc.a.o()),
+                  new dzi(new dyw(cuc.cq), dyr.b, cuc.a.o()),
+                  new dzi(new dyw(cuc.og), dyr.b, cuc.og.o().a(cuo.c, Boolean.valueOf(false))),
+                  new dzi(new dzk(cuc.m, 0.08F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.V, 0.08F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.eY, 0.5F), dyr.b, cuc.bs.o()),
+                  new dzi(
+                     new dyy(cuc.eY.o().a(cxz.a, Boolean.valueOf(true)).a(cxz.c, Boolean.valueOf(true))),
+                     dyr.b,
+                     cuc.hL.o().a(cxz.a, Boolean.valueOf(true)).a(cxz.c, Boolean.valueOf(true))
+                  ),
+                  new dzi(
+                     new dyy(cuc.eY.o().a(cxz.b, Boolean.valueOf(true)).a(cxz.d, Boolean.valueOf(true))),
+                     dyr.b,
+                     cuc.hL.o().a(cxz.b, Boolean.valueOf(true)).a(cxz.d, Boolean.valueOf(true))
+                  ),
+                  new dzi(new dzk(cuc.cB, 0.3F), dyr.b, cuc.fd.o()),
+                  new dzi(new dzk(cuc.cB, 0.2F), dyr.b, cuc.gu.o()),
+                  new dzi[0]
+               )
+            )
+         )
+      );
+      a(
          $$0,
          e,
-         dnq.r,
-         new dpw(
-            drv.a(cte.eT.o().a(cwx.f, Boolean.valueOf(true)).a(cwx.g, Boolean.valueOf(false))),
-            drv.a(cte.eV.o().a(cwx.f, Boolean.valueOf(false)).a(cwx.g, Boolean.valueOf(false))),
-            3
+         ImmutableList.of(
+            new dzm(
+               ImmutableList.of(
+                  new dzi(new dzv(aqs.p), dyr.b, cuc.a.o()),
+                  new dzi(new dyw(cuc.cp), dyr.b, cuc.a.o()),
+                  new dzi(new dyw(cuc.cq), dyr.b, cuc.a.o()),
+                  new dzi(new dzk(cuc.jS, 0.08F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.aX, 0.1F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.iA, 0.08F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.nl, 0.08F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.ny, 0.08F), dyr.b, cuc.bs.o()),
+                  new dzi(new dzk(cuc.cB, 0.2F), dyr.b, cuc.kD.o()),
+                  new dzi(new dzk(cuc.cB, 0.1F), dyr.b, cuc.fe.o())
+               )
+            )
          )
       );
-      or.a(
+      a($$0, f, ImmutableList.of(new dzm(ImmutableList.of(new dzi(new dzk(cuc.m, 0.1F), dyr.b, cuc.cn.o())))));
+      a($$0, g, ImmutableList.of(new dzm(ImmutableList.of(new dzi(new dzk(cuc.m, 0.2F), dyr.b, cuc.cn.o())))));
+      a($$0, h, ImmutableList.of(new dzm(ImmutableList.of(new dzi(new dzk(cuc.m, 0.7F), dyr.b, cuc.cn.o())))));
+      a(
          $$0,
-         f,
-         dnq.q,
-         new dpw(drv.a(cte.eU.o().a(cwx.g, Boolean.valueOf(false))), drv.a(cte.eV.o().a(cwx.f, Boolean.valueOf(false)).a(cwx.g, Boolean.valueOf(false))), 2)
+         i,
+         ImmutableList.of(
+            new dzm(
+               ImmutableList.of(
+                  new dzi(new dyw(cuc.kE), new dyw(cuc.G), cuc.n.o()),
+                  new dzi(new dzk(cuc.kE, 0.1F), dyr.b, cuc.i.o()),
+                  new dzi(new dyw(cuc.i), new dyw(cuc.G), cuc.G.o()),
+                  new dzi(new dyw(cuc.j), new dyw(cuc.G), cuc.G.o())
+               )
+            )
+         )
       );
-      dsj $$3 = new dsj(0.002F);
-      dsj $$4 = new dsj(0.01F);
-      dsj $$5 = new dsj(0.02F);
-      dsj $$6 = new dsj(0.05F);
-      dsj $$7 = new dsj(1.0F);
-      or.a($$0, g, dnq.f, a().c());
-      or.a(
+      a(
          $$0,
-         h,
-         dnq.f,
-         new dqq.a(drv.a(cte.aa), new dss(6, 2, 1), drv.a(cte.aK), new dre(bgg.a(0), bgg.a(0)), new dqx(1, 1, 0, 1, 2, OptionalInt.empty())).a().c()
+         j,
+         ImmutableList.of(
+            new dzm(
+               ImmutableList.of(
+                  new dzi(new dyw(cuc.kE), new dyw(cuc.G), cuc.r.o()),
+                  new dzi(new dzk(cuc.kE, 0.2F), dyr.b, cuc.i.o()),
+                  new dzi(new dyw(cuc.i), new dyw(cuc.G), cuc.G.o()),
+                  new dzi(new dyw(cuc.j), new dyw(cuc.G), cuc.G.o())
+               )
+            )
+         )
       );
-      or.a($$0, i, dnq.f, b().c());
-      or.a($$0, j, dnq.f, new dqq.a(drv.a(cte.Y), new dsu(5, 2, 2), drv.a(cte.aI), new dra(bgg.a(2), bgg.a(0)), new dqy(1, 0, 2)).a().c());
-      or.a($$0, z, dnq.f, f().c());
-      or.a($$0, K, dnq.f, f().a(List.of($$6)).c());
-      or.a($$0, k, dnq.f, new dqq.a(drv.a(cte.V), new dsx(5, 2, 1), drv.a(cte.aF), new drm(bgp.a(2, 3), bgp.a(0, 2), bgp.a(1, 2)), new dqy(2, 0, 2)).a().c());
-      or.a($$0, l, dnq.f, new dqq.a(drv.a(cte.V), new dsx(6, 4, 0), drv.a(cte.aF), new drk(bgg.a(1), bgg.a(1), bgp.a(3, 4)), new dqy(2, 0, 2)).a().c());
-      or.a($$0, m, dnq.f, d().a(ImmutableList.of(new dsk(0.2F), dso.b, new dsl(0.25F))).a().c());
-      or.a($$0, n, dnq.f, e().c());
-      or.a($$0, o, dnq.f, d().a().c());
-      or.a(
+      a(
+         $$0,
+         k,
+         ImmutableList.of(
+            new dzm(
+               ImmutableList.of(
+                  new dzi(new dyw(cuc.kE), new dyw(cuc.G), cuc.o.o()),
+                  new dzi(new dyw(cuc.kE), new dyw(cuc.dO), cuc.o.o()),
+                  new dzi(new dzk(cuc.kE, 0.2F), dyr.b, cuc.i.o()),
+                  new dzi(new dyw(cuc.i), new dyw(cuc.G), cuc.G.o()),
+                  new dzi(new dyw(cuc.j), new dyw(cuc.G), cuc.G.o())
+               )
+            )
+         )
+      );
+      a(
+         $$0,
+         l,
+         ImmutableList.of(
+            new dzm(
+               ImmutableList.of(
+                  new dzi(new dzk(cuc.cB, 0.3F), dyr.b, cuc.gt.o()),
+                  new dzi(new dzk(cuc.cB, 0.2F), dyr.b, cuc.gu.o()),
+                  new dzi(new dzk(cuc.cB, 0.1F), dyr.b, cuc.kD.o())
+               )
+            )
+         )
+      );
+      a($$0, m, ImmutableList.of(new dzm(ImmutableList.of(new dzi(new dzk(cuc.cB, 0.1F), dyr.b, cuc.fe.o())))));
+      a(
+         $$0,
+         n,
+         ImmutableList.of(new dzm(ImmutableList.of(new dzi(new dzk(cuc.cB, 0.1F), dyr.b, cuc.gt.o()), new dzi(new dzk(cuc.cB, 0.8F), dyr.b, cuc.gu.o()))))
+      );
+      a(
+         $$0,
+         o,
+         ImmutableList.of(new dzm(ImmutableList.of(new dzi(new dzk(cuc.cB, 0.3F), dyr.b, cuc.fd.o()), new dzi(new dzk(cuc.cB, 0.2F), dyr.b, cuc.gu.o()))))
+      );
+      a(
          $$0,
          p,
-         dnq.f,
-         new dqq.a(drv.a(cte.X), new dsw(10, 2, 19), drv.a(cte.aH), new dri(bgg.a(2), bgg.a(0), 2), new dqy(1, 1, 2))
-            .a(ImmutableList.of(dso.b, new dsl(0.25F)))
-            .c()
+         ImmutableList.of(new dzm(ImmutableList.of(new dzi(new dzk(cuc.cB, 0.2F), dyr.b, cuc.kD.o()), new dzi(new dzk(cuc.cB, 0.1F), dyr.b, cuc.fe.o()))))
       );
-      or.a(
-         $$0,
-         q,
-         dnq.f,
-         new dqq.a(drv.a(cte.V), new dsv(13, 2, 14), drv.a(cte.aF), new drj(bgg.a(0), bgg.a(0), bgp.a(13, 17)), new dqy(1, 1, 2))
-            .a(ImmutableList.of(new dsh(drv.a(cte.l))))
-            .c()
-      );
-      or.a(
+      a($$0, q, ImmutableList.of(new dyx(0.05F)));
+      a(
          $$0,
          r,
-         dnq.f,
-         new dqq.a(drv.a(cte.V), new dsv(13, 2, 14), drv.a(cte.aF), new drj(bgg.a(0), bgg.a(0), bgp.a(3, 7)), new dqy(1, 1, 2))
-            .a(ImmutableList.of(new dsh(drv.a(cte.l))))
-            .c()
+         ImmutableList.of(
+            new dzm(ImmutableList.of(new dzi(new dzk(cuc.kJ, 0.75F), dyr.b, cuc.px.o()), new dzi(new dzk(cuc.px, 0.15F), dyr.b, cuc.pw.o()), $$3, $$2))
+         )
       );
-      or.a($$0, s, dnq.f, c().a(ImmutableList.of($$3)).c());
-      or.a($$0, t, dnq.f, c().a(ImmutableList.of($$7)).c());
-      or.a($$0, u, dnq.f, a(cte.U, cte.aE, 5, 3, 0, 3).a(ImmutableList.of(new dsl(0.25F))).c());
-      or.a($$0, v, dnq.f, new dqq.a(drv.a(cte.X), new dsx(1, 0, 0), drv.a(cte.aE), new drc(bgg.a(2), bgg.a(1), 2), new dqy(0, 0, 0)).c());
-      or.a(
+      a(
+         $$0,
+         s,
+         ImmutableList.of(
+            new dzm(ImmutableList.of(new dzi(new dzk(cuc.pw, 0.35F), dyr.b, cuc.px.o()), new dzi(new dzk(cuc.py, 0.1F), dyr.b, cuc.px.o()), $$3, $$2))
+         )
+      );
+      a(
+         $$0,
+         t,
+         ImmutableList.of(
+            new dzm(ImmutableList.of(new dzi(new dzk(cuc.pw, 0.3F), dyr.b, cuc.px.o()), new dzi(new dzk(cuc.pr, 1.0E-4F), dyr.b, cuc.a.o()), $$3, $$2))
+         )
+      );
+      a(
+         $$0,
+         u,
+         ImmutableList.of(
+            new dzm(ImmutableList.of(new dzi(new dzk(cuc.py, 0.5F), dyr.b, cuc.a.o()), new dzi(new dzk(cuc.ch, 0.1F), dyr.b, cuc.px.o()), $$3, $$2))
+         )
+      );
+      a(
+         $$0,
+         v,
+         ImmutableList.of(
+            new dzm(ImmutableList.of(new dzi(new dzk(cuc.pw, 0.1F), dyr.b, cuc.px.o()), new dzi(new dzk(cuc.pr, 1.0E-4F), dyr.b, cuc.a.o()), $$3, $$2))
+         )
+      );
+      a(
          $$0,
          w,
-         dnq.f,
-         new dqq.a(
-               drv.a(cte.U),
-               new dsq(4, 2, 0, 3, bgp.a(1, 2)),
-               new dsf(bfo.<dfd>a().a(cte.aM.o(), 3).a(cte.aN.o(), 1)),
-               new drl(bgg.a(3), bgg.a(0), bgg.a(2), 50),
-               new dqy(1, 0, 1)
+         ImmutableList.of(
+            new dzm(
+               ImmutableList.of(
+                  new dzi(new dzk(cuc.pw, 0.3F), dyr.b, cuc.px.o()),
+                  new dzi(new dzk(cuc.pr, 1.0E-4F), dyr.b, cuc.a.o()),
+                  new dzi(new dzk(cuc.ch, 0.3F), dyr.b, cuc.px.o()),
+                  $$3,
+                  $$2
+               )
             )
-            .a(drv.a(cte.rG))
-            .b()
-            .c()
+         )
       );
-      or.a(
+      a(
          $$0,
          x,
-         dnq.f,
-         new dqq.a(
-               drv.a(cte.ab),
-               new dta(2, 1, 4, bgp.a(1, 4), 0.5F, bgp.a(0, 1), $$1.b(apv.cb)),
-               drv.a(cte.aL),
-               new drl(bgg.a(3), bgg.a(0), bgg.a(2), 70),
-               Optional.of(
-                  new drr(
-                     bgp.a(1, 3),
-                     drv.a(cte.ac),
-                     Optional.of(new drp(drv.a(cte.rz), 0.5F)),
-                     new drq($$1.b(apv.cc), hi.a(ctc::r, cte.rH, cte.ad), drv.a(cte.ad), 8, 15, 0.2F)
-                  )
-               ),
-               new dqy(2, 0, 2)
-            )
-            .a(
-               List.of(
-                  new dsl(0.125F), new dsi(0.14F, 1, 0, new dsb(drv.a(cte.E.o().a(cxv.d, Boolean.valueOf(true))), cxv.b, bgp.a(0, 4)), 2, List.of(ha.a)), $$4
+         ImmutableList.of(
+            new dzm(
+               ImmutableList.of(
+                  new dzi(new dzk(cuc.pw, 0.4F), dyr.b, cuc.px.o()),
+                  new dzi(new dzk(cuc.pr, 0.01F), dyr.b, cuc.px.o()),
+                  new dzi(new dzk(cuc.pw, 1.0E-4F), dyr.b, cuc.a.o()),
+                  new dzi(new dzk(cuc.pr, 1.0E-4F), dyr.b, cuc.a.o()),
+                  new dzi(new dzk(cuc.ch, 0.3F), dyr.b, cuc.px.o()),
+                  $$3,
+                  $$2
                )
             )
-            .a()
-            .c()
+         )
       );
-      or.a(
+      a(
          $$0,
          y,
-         dnq.f,
-         new dqq.a(
-               drv.a(cte.ab),
-               new dta(4, 1, 9, bgp.a(1, 6), 0.5F, bgp.a(0, 1), $$1.b(apv.cb)),
-               drv.a(cte.aL),
-               new drl(bgg.a(3), bgg.a(0), bgg.a(2), 70),
-               Optional.of(
-                  new drr(
-                     bgp.a(3, 7),
-                     drv.a(cte.ac),
-                     Optional.of(new drp(drv.a(cte.rz), 0.5F)),
-                     new drq($$1.b(apv.cc), hi.a(ctc::r, cte.rH, cte.ad), drv.a(cte.ad), 8, 15, 0.2F)
-                  )
-               ),
-               new dqy(3, 0, 2)
-            )
-            .a(
-               List.of(
-                  new dsl(0.125F), new dsi(0.14F, 1, 0, new dsb(drv.a(cte.E.o().a(cxv.d, Boolean.valueOf(true))), cxv.b, bgp.a(0, 4)), 2, List.of(ha.a)), $$4
+         ImmutableList.of(
+            new dzm(ImmutableList.of(new dzi(new dzk(cuc.py, 0.5F), dyr.b, cuc.a.o()), new dzi(new dzk(cuc.ch, 0.6F), dyr.b, cuc.px.o()), $$3, $$2))
+         )
+      );
+      a(
+         $$0,
+         z,
+         ImmutableList.of(new dzm(ImmutableList.of(new dzi(new dzk(cuc.pw, 0.3F), dyr.b, cuc.px.o()), new dzi(new dzk(cuc.pr, 1.0E-4F), dyr.b, cuc.a.o()))))
+      );
+      a(
+         $$0,
+         A,
+         ImmutableList.of(
+            new dzm(
+               ImmutableList.of(
+                  new dzi(new dzk(cuc.pw, 0.3F), dyr.b, cuc.px.o()),
+                  new dzi(new dzk(cuc.pw, 0.15F), dyr.b, cuc.a.o()),
+                  new dzi(new dzk(cuc.pw, 0.3F), dyr.b, cuc.pr.o())
                )
             )
-            .a()
-            .c()
+         )
       );
-      or.a($$0, A, dnq.f, a().a(List.of($$3)).c());
-      or.a($$0, B, dnq.f, a().a(List.of($$5)).c());
-      or.a($$0, C, dnq.f, a().a(List.of($$6)).c());
-      or.a($$0, D, dnq.f, b().a(List.of($$3)).c());
-      or.a($$0, E, dnq.f, b().a(List.of($$5)).c());
-      or.a($$0, F, dnq.f, b().a(List.of($$6)).c());
-      or.a($$0, G, dnq.f, e().a(List.of($$3)).c());
-      or.a($$0, H, dnq.f, e().a(List.of($$5)).c());
-      or.a($$0, I, dnq.f, e().a(List.of($$6)).c());
-      or.a($$0, J, dnq.f, e().a(List.of($$7)).c());
+      a(
+         $$0,
+         B,
+         ImmutableList.of(
+            new dzm(
+               ImmutableList.of(
+                  new dzi(new dzk(cuc.pw, 0.01F), dyr.b, cuc.a.o()),
+                  new dzi(new dzk(cuc.pw, 0.5F), dyr.b, cuc.px.o()),
+                  new dzi(new dzk(cuc.pw, 0.3F), dyr.b, cuc.pr.o()),
+                  $$3
+               )
+            )
+         )
+      );
+      a(
+         $$0,
+         C,
+         ImmutableList.of(
+            new dzm(
+               ImmutableList.of(new dzi(new dzk(cuc.ch, 0.3F), dyr.b, cuc.px.o()), new dzi(dyr.b, dyr.b, new dys(0.0F, 0.05F, 0, 100, hx.a.b), cuc.a.o()), $$3)
+            )
+         )
+      );
+      a($$0, D, ImmutableList.of(new dyx(0.9F), new dzj(aqs.bH)));
+      a($$0, E, ImmutableList.of(new dyx(0.1F), new dzj(aqs.bH)));
+      a($$0, F, ImmutableList.of(new dyx(0.1F), new dzm(ImmutableList.of(new dzi(new dyw(cuc.R), dyr.b, cuc.cy.o()))), new dzj(aqs.bH)));
+      a(
+         $$0,
+         G,
+         ImmutableList.of(
+            new dzm(
+               ImmutableList.of(
+                  new dzi(new dzk(cuc.rV, 0.3F), dyr.b, cuc.sa.o()),
+                  new dzi(new dzk(cuc.rR, 0.3F), dyr.b, cuc.sb.o()),
+                  new dzi(new dzk(cuc.of, 0.05F), dyr.b, cuc.a.o())
+               )
+            ),
+            new dzj(aqs.bH)
+         )
+      );
+      a(
+         $$0,
+         H,
+         ImmutableList.of(
+            new dyx($$1.b(aqs.bN), 0.95F),
+            new dzm(
+               ImmutableList.of(
+                  new dzi(new dzk(cuc.rV, 0.3F), dyr.b, cuc.sa.o()),
+                  new dzi(new dzk(cuc.rR, 0.3F), dyr.b, cuc.sb.o()),
+                  new dzi(new dzk(cuc.of, 0.05F), dyr.b, cuc.a.o())
+               )
+            ),
+            new dzj(aqs.bH)
+         )
+      );
+      a(
+         $$0,
+         I,
+         ImmutableList.of(
+            new dyx($$1.b(aqs.bN), 0.95F),
+            new dzm(
+               ImmutableList.of(
+                  new dzi(new dzk(cuc.rV, 0.3F), dyr.b, cuc.sa.o()),
+                  new dzi(new dzk(cuc.rR, 0.3F), dyr.b, cuc.sb.o()),
+                  new dzi(new dzk(cuc.rT, 0.3F), dyr.b, cuc.a.o()),
+                  new dzi(new dzk(cuc.of, 0.05F), dyr.b, cuc.a.o())
+               )
+            ),
+            new dzj(aqs.bH)
+         )
+      );
+      a(
+         $$0,
+         J,
+         List.of(
+            new dzm(
+               List.of(
+                  new dzi(new dzk(cuc.L, 0.2F), dyr.b, cuc.j.o()),
+                  new dzi(new dzk(cuc.L, 0.1F), dyr.b, cuc.k.o()),
+                  new dzi(new dzk(cuc.eM, 0.1F), dyr.b, cuc.eL.o())
+               )
+            ),
+            a(edg.aE, 6),
+            a(edg.aF, 3)
+         )
+      );
+      a(
+         $$0,
+         K,
+         List.of(
+            new dzm(
+               List.of(
+                  new dzi(new dzk(cuc.L, 0.2F), dyr.b, cuc.j.o()),
+                  new dzi(new dzk(cuc.L, 0.1F), dyr.b, cuc.k.o()),
+                  new dzi(new dzk(cuc.eM, 0.1F), dyr.b, cuc.eL.o())
+               )
+            ),
+            a(edg.aE, 2)
+         )
+      );
+      a($$0, L, List.of(a(edg.aE, 2)));
+   }
+
+   private static dyz a(afw $$0, int $$1) {
+      return new dyz(new dzm(List.of(new dzi(new dzv(aqs.cl), dyr.b, dzf.b, cuc.M.o(), new dzx($$0)))), bhd.a($$1));
    }
 }
